app index overflow bug fix test4

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -24,3 +24,7 @@ html > body > webview {
     right: 0;
     overflow-y: hidden;
 }
+
+html > body > webview > html > body {
+    overflow-y: hidden;
+}
